[gd_scene load_steps=2 format=3 uid="uid://bi0audci6bx6x"]

[ext_resource type="Script" uid="uid://b64ns3gxvpih5" path="res://addons/colex/colex_ui.gd" id="1"]

[node name="CollisionExporterDock" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -731.0
offset_bottom = -374.0
size_flags_horizontal = 0
script = ExtResource("1")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 2
text = "Collision Data Exporter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ParseButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Parse Current Scene"

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="FormatLabel" type="Label" parent="."]
layout_mode = 2
text = "Export Format:"

[node name="ExportOptions" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
item_count = 1
popup/item_0/text = "Json"
popup/item_0/id = 0

[node name="PathLabel" type="Label" parent="."]
layout_mode = 2
text = "Export Path:"

[node name="PathContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="FilePathLineEdit" type="LineEdit" parent="PathContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "res://collision_data.json"
placeholder_text = "Enter file path..."

[node name="BrowseButton" type="Button" parent="PathContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "..."

[node name="ExportButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Export Collision Data"

[node name="StatusLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Ready"
autowrap_mode = 3

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2

[node name="HelpLabel" type="Label" parent="."]
layout_mode = 2
text = "1. Parse current scene
2. Choose export format
3. Set file path
4. Export data"
autowrap_mode = 3

[node name="OutputFileDialog" type="FileDialog" parent="."]
access = 2

[node name="SuccessDialog" type="AcceptDialog" parent="."]
dialog_text = "Export completed successfully!"

[node name="FailDialog" type="AcceptDialog" parent="."]
dialog_text = "Export failed. See console for details."

[node name="FilesErrorDialog" type="AcceptDialog" parent="."]
dialog_text = "Please parse scene and specify output path first!"

[connection signal="pressed" from="ParseButton" to="." method="_on_parse_button_pressed"]
[connection signal="pressed" from="PathContainer/BrowseButton" to="." method="_on_browse_button_pressed"]
[connection signal="pressed" from="ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="file_selected" from="OutputFileDialog" to="." method="_on_output_file_dialog_file_selected"]
